--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "tokenlens": "^1.3.1",
     "tw-animate-css": "^1.4.0",
     "use-stick-to-bottom": "^1.1.2",
-    "zod": "^4.3.6"
+    "zod": "^4.3.6",
+    "dotenv": "^17.2.3"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.13",
@@ -65,7 +66,6 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-file-icon": "^1.0.4",
-    "dotenv": "^17.2.3",
     "drizzle-kit": "^0.31.8",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
